Fix alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -128,7 +128,7 @@ body {
     margin-top: 1rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 1rem;
     font-style: italic;
     color: var(--text-500);
